Added spatie laravel-medialibrary

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "predis/predis": "^2.3"
+        "predis/predis": "^2.3",
+        "spatie/laravel-medialibrary": "^11.11"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.1",
